Fix profile menu overflow issue

--- a/frontend/src/styles/components/_profileMenu.scss
+++ b/frontend/src/styles/components/_profileMenu.scss
@@ -20,7 +20,7 @@
   .menu {
     position: absolute;
     top: 4rem;
-    right: 0;
+    right: 2rem;
     padding: 0.6rem 1rem 1rem;
     border-radius: 6px;
     background-color: white;
