--- a/frontend/src/styles/layouts/_header.scss
+++ b/frontend/src/styles/layouts/_header.scss
@@ -38,15 +38,7 @@ header {
     }
   }
 
-  .profile-menu .menu {
-    margin-right: 2rem;
-  }
-
   @media (min-width: 600px) {
     padding-inline: 0;
-
-    .profile-menu .menu {
-      margin-right: 0;
-    }
   }
 }
